# ECHO-MAPS

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-api.txt
.github/: copilot-instructions.md
.github/workflows/: deploy-pages.yml
.illy/: Echo_Vue_Architecture_Topology.docx  architecture_topology.md  export_architecture.py  generate_topology_diagrams.py  latest_release.md
echo_maps/: __init__.py  __main__.py  config.py
echo_maps/ai/: __init__.py  calibration_gan.py  cross_modal.py  latent_csi.py  losses.py  spatial_attention.py  wave_former.py
echo_maps/api/: app.py  deps.py
echo_maps/api/routes/: auth.py  bridge.py  calibration.py  environments.py  health.py  live.py  room_scan.py  settings.py
echo_maps/billing/: __init__.py
echo_maps/bridge/: __init__.py  manager.py  protocol.py
echo_maps/calibration/: __init__.py  types.py
echo_maps/csi/: __init__.py  filters.py  parser.py  pointcloud.py
echo_maps/db/: models.py  session.py  vector_store.py
echo_maps/federated/: __init__.py
echo_maps/tracking/: __init__.py  ble_tether.py  kalman.py  multi_person.py  rf_signature.py
echo_maps/vision/: __init__.py  floor_plan_generator.py  room_scanner.py  skeletal.py
firmware/: partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.illy-bridge
firmware/main/: main.c
firmware/src/: CMakeLists.txt  audio_io.c  audio_io.h  bridge_httpd.c  bridge_httpd.h  camera_capture.c  camera_capture.h  idf_component.yml  lcd_ui.c  lcd_ui.h  main.c
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BridgeCalibration.tsx  BridgeManager.tsx  CalibrationPanel.tsx  ChunkErrorRecover.tsx  EmojiPicker.tsx  EnvironmentDetail.tsx  EnvironmentViewer.tsx  FloorPlanEditor.tsx  LiveFloorPlanMap.tsx  RoomScanner.tsx  VitalsMonitor.tsx
frontend/src/lib/: api.ts  cloudSync.ts  collectedData.ts  correlationEngine.ts  environments.ts  poseBus.ts  poseEstimator.ts  presenceEngine.ts  roomScanApi.ts  useSkeletalStream.ts
frontend/src/stubs/: mediapipe-pose.js  tfjs-backend-webgpu.js
migrations/: env.py
tests/: test_ai_models.py  test_billing.py  test_bridge_protocol.py  test_csi_parser.py  test_filters.py
(+8 files in other folders)
