[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-maps"
version = "0.1.0"
description = "Echo Maps by Illy Robotics — Privacy-first environmental digital twin via WiFi CSI sensing"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Illy Robotics"},
]

dependencies = [
    # Core AI
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "diffusers>=0.27.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",

    # Vision / Pose
    "mediapipe>=0.10.9",
    "opencv-python>=4.9.0",
    "open3d>=0.18.0",

    # CSI Processing
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",

    # Backend
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",

    # Vector DB
    "pymilvus>=2.3.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",

    # Federated Learning
    "flower>=1.7.0",

    # Cloud / Storage
    "google-cloud-storage>=2.14.0",
    "google-auth>=2.28.0",

    # Monitoring
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",

    # Serialization
    "orjson>=3.9.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

firmware = [
    "esptool>=4.7.0",
    "platformio>=6.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
